--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/Emailcon-campaign
+MONGO_URI=mongodb+srv://emailcon01012000:emailcon@cluster0.ry3pq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
