--- a/my-app/src/component/vercel.json
+++ b/my-app/src/component/vercel.json
@@ -7,5 +7,10 @@
     "routes": [{
         "src": "/(.*)",
         "dest": "server.js"
+    }],
+      "rewrites": [{ 
+        "source": "/(.*)",
+         "destination": "/index.html"
     }]
+
 }
