--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,6 +7,7 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "crypto-js": "^4.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
